Fix problem of rendering animation

Animation is rendered in multiple threads, the loaders cannot be
accessed in multiple threads though. So now there is a wrapper class
that locks the access to the library loading.

BUG:457043