libs/koplugin/KoPluginLoader.cpp
@@ -56,9 +56,9 @@ void KoPluginLoader::load(const QString & serviceType, const QString & versionSt
         query += QString::fromLatin1(" and (%1)").arg(versionString);
     }
 
-    QList<QSharedPointer<QPluginLoader>> offers = KoJsonTrader::instance()->query(serviceType, QString());
+    QList<KoJsonTrader::Plugin> offers = KoJsonTrader::instance()->query(serviceType, QString());
 
-    QList<QSharedPointer<QPluginLoader>> plugins;
+    QList<KoJsonTrader::Plugin> plugins;
 
     bool configChanged = false;
     QList<QString> blacklist; // what we will save out afterwards
@@ -74,14 +74,14 @@ void KoPluginLoader::load(const QString & serviceType, const QString & versionSt
         if (firstStart) {
             configChanged = true;
         }
-        Q_FOREACH (QSharedPointer<QPluginLoader> loader, offers) {
-            QJsonObject json = loader->metaData().value("MetaData").toObject();
+        Q_FOREACH (const KoJsonTrader::Plugin &loader, offers) {
+            QJsonObject json = loader.metaData().value("MetaData").toObject();
             if (json.contains("KPlugin")) {
                 json = json.value("KPlugin").toObject();
             }
             const QString pluginName = json.value("Id").toString();
             if (pluginName.isEmpty()) {
-                qWarning() << "Loading plugin" << loader->fileName() << "failed, has no X-KDE-PluginInfo-Name.";
+                qWarning() << "Loading plugin" << loader.fileName() << "failed, has no X-KDE-PluginInfo-Name.";
                 continue;
             }
 
@@ -100,44 +100,44 @@ void KoPluginLoader::load(const QString & serviceType, const QString & versionSt
         plugins = offers;
     }
 
-    QMap<QString, QSharedPointer<QPluginLoader>> serviceNames;
-    Q_FOREACH (QSharedPointer<QPluginLoader> loader, plugins) {
-        if (serviceNames.contains(loader->fileName())) { // duplicate
-            QJsonObject json2 = loader->metaData().value("MetaData").toObject();
+    QMap<QString, KoJsonTrader::Plugin> serviceNames;
+    Q_FOREACH (const KoJsonTrader::Plugin &loader, plugins) {
+        if (serviceNames.contains(loader.fileName())) { // duplicate
+            QJsonObject json2 = loader.metaData().value("MetaData").toObject();
             QVariant pluginVersion2 = json2.value("X-Flake-PluginVersion").toVariant();
             if (pluginVersion2.isNull()) { // just take the first one found...
                 continue;
             }
-            QSharedPointer<QPluginLoader> currentLoader = serviceNames.value(loader->fileName());
-            QJsonObject json = currentLoader->metaData().value("MetaData").toObject();
+            KoJsonTrader::Plugin currentLoader = serviceNames.value(loader.fileName());
+            QJsonObject json = currentLoader.metaData().value("MetaData").toObject();
             QVariant pluginVersion = json.value("X-Flake-PluginVersion").toVariant();
             if (!(pluginVersion.isNull() || pluginVersion.toInt() < pluginVersion2.toInt())) {
                 continue; // replace the old one with this one, since its newer.
             }
         }
-        serviceNames.insert(loader->fileName(), loader);
+        serviceNames.insert(loader.fileName(), loader);
     }
 
     QList<QString> whiteList;
     Q_FOREACH (const QString &serviceName, serviceNames.keys()) {
         dbgPlugins << "loading" << serviceName;
-        QSharedPointer<QPluginLoader> loader = serviceNames[serviceName];
-        KPluginFactory *factory = qobject_cast<KPluginFactory *>(loader->instance());
+        KoJsonTrader::Plugin loader = serviceNames[serviceName];
+        KPluginFactory *factory = qobject_cast<KPluginFactory *>(loader.instance());
         QObject *plugin = 0;
         if (factory) {
             plugin = factory->create<QObject>(owner ? owner : this, QVariantList());
         }
         if (plugin) {
-            QJsonObject json = loader->metaData().value("MetaData").toObject();
+            QJsonObject json = loader.metaData().value("MetaData").toObject();
             json = json.value("KPlugin").toObject();
             const QString pluginName = json.value("Id").toString();
             whiteList << pluginName;
-            dbgPlugins << "\tLoaded plugin" << loader->fileName() << owner;
+            dbgPlugins << "\tLoaded plugin" << loader.fileName() << owner;
             if (!owner) {
                 delete plugin;
             }
         } else {
-            qWarning() << "Loading plugin" << loader->fileName() << "failed, " << loader->errorString();
+            qWarning() << "Loading plugin" << loader.fileName() << "failed, " << loader.errorString();
         }
     }
 
